--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -4,13 +4,14 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    
     # 環境変数設定
     environment:
       # 本番サーバー (next start) を実行
       NODE_ENV: production
       # コンテナ内部のポート (Dockerfileで設定済み)
       PORT: 3000
+      # 他の環境変数があればここに追記
+      NEXT_PUBLIC_BLOG_S3_BASE_URL: https://portfolio-nextjs-ts.s3.ap-northeast-1.amazonaws.com/
 
     # サービス起動時に実行するコマンド (本番サーバー起動)
     command: npm start --prefix src
