--- a/compose.yaml
+++ b/compose.yaml
@@ -16,6 +16,7 @@ services:
       # ホットリロード用の監視設定
       WATCHPACK_POLLING: true
       # 他の環境変数があればここに追記
+      NEXT_PUBLIC_BLOG_S3_BASE_URL: https://portfolio-nextjs-ts.s3.ap-northeast-1.amazonaws.com/
     
     # ターミナルを有効化（対話型モード）
     tty: true
