--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -4,6 +4,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+        NEXT_PUBLIC_BLOG_S3_BASE_URL: https://portfolio-nextjs-ts.s3.ap-northeast-1.amazonaws.com/
     # 環境変数設定
     environment:
       # 本番サーバー (next start) を実行
