--- a/src/package.json
+++ b/src/package.json
@@ -11,10 +11,11 @@
   "dependencies": {
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.11.1",
-    "next": "16.0.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "next": "^16.0.10",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-markdown": "^9.0.1",
+    "react-server-dom-webpack": "^19.2.3",
     "remark": "^14.0.3",
     "remark-gfm": "^4.0.0"
   },
@@ -25,7 +26,7 @@
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "^1.0.0",
     "eslint": "^9",
-    "eslint-config-next": "16.0.0",
+    "eslint-config-next": "^16.0.10",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
