--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -7,6 +7,8 @@ services:
       args:
         NEXT_PUBLIC_BLOG_CLD_FLONT_BASE_URL: https://d2z072fjnbmllc.cloudfront.net/
         NEXT_PUBLIC_BLOG_CLD_FLONT_IMAGE_URL: https://d2z072fjnbmllc.cloudfront.net
+        NEXT_PUBLIC_BASIC_AUTH_USER: rootUser
+        NEXT_PUBLIC_BASIC_AUTH_PASSWORD: jI4^jRyDg*bD
     # 環境変数設定
     environment:
       # 本番サーバー (next start) を実行
@@ -16,6 +18,8 @@ services:
       # 他の環境変数があればここに追記
       NEXT_PUBLIC_BLOG_CLD_FLONT_BASE_URL: https://d2z072fjnbmllc.cloudfront.net/
       NEXT_PUBLIC_BLOG_CLD_FLONT_IMAGE_URL: https://d2z072fjnbmllc.cloudfront.net
+      NEXT_PUBLIC_BASIC_AUTH_USER: rootUser
+      NEXT_PUBLIC_BASIC_AUTH_PASSWORD: jI4^jRyDg*bD
 
     # サービス起動時に実行するコマンド (本番サーバー起動)
     command: npm start --prefix src
