--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -25,9 +25,9 @@ services:
     command: npm start --prefix src
 
     # ポートマッピング
-    # 外部の80番ポートをコンテナ内部の3000番ポートにマッピング
+    # 3000番ポートにマッピング
     ports:
-      - "80:3000"
+      - "3000:3000"
 
     # 常に再起動する設定 (コンテナが落ちても自動復旧)
     restart: always
