--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -5,8 +5,8 @@ services:
       context: .
       dockerfile: Dockerfile
       args:
-        NEXT_PUBLIC_BLOG_CLD_FLONT_BASE_URL: https://d2z072fjnbmllc.cloudfront.net/
-        NEXT_PUBLIC_BLOG_CLD_FLONT_IMAGE_URL: https://d2z072fjnbmllc.cloudfront.net
+        NEXT_PUBLIC_BLOG_CLD_FLONT_BASE_URL: https://shoat-portfolio.com/
+        NEXT_PUBLIC_BLOG_CLD_FLONT_IMAGE_URL: https://shoat-portfolio.com
         NEXT_PUBLIC_BASIC_AUTH_USER: rootUser
         NEXT_PUBLIC_BASIC_AUTH_PASSWORD: jI4^jRyDg*bD
     # 環境変数設定
@@ -16,8 +16,8 @@ services:
       # コンテナ内部のポート (Dockerfileで設定済み)
       PORT: 3000
       # 他の環境変数があればここに追記
-      NEXT_PUBLIC_BLOG_CLD_FLONT_BASE_URL: https://d2z072fjnbmllc.cloudfront.net/
-      NEXT_PUBLIC_BLOG_CLD_FLONT_IMAGE_URL: https://d2z072fjnbmllc.cloudfront.net
+      NEXT_PUBLIC_BLOG_CLD_FLONT_BASE_URL: https://shoat-portfolio.com/
+      NEXT_PUBLIC_BLOG_CLD_FLONT_IMAGE_URL: https://shoat-portfolio.com
       NEXT_PUBLIC_BASIC_AUTH_USER: rootUser
       NEXT_PUBLIC_BASIC_AUTH_PASSWORD: jI4^jRyDg*bD
 
