--- a/compose.yaml
+++ b/compose.yaml
@@ -5,8 +5,8 @@ services:
       context: .
       dockerfile: Dockerfile
       args:
-        NEXT_PUBLIC_BLOG_CLD_FLONT_BASE_URL: https://d2z072fjnbmllc.cloudfront.net/
-        NEXT_PUBLIC_BLOG_CLD_FLONT_IMAGE_URL: https://d2z072fjnbmllc.cloudfront.net
+        NEXT_PUBLIC_BLOG_CLD_FLONT_BASE_URL: https://shoat-portfolio.com/
+        NEXT_PUBLIC_BLOG_CLD_FLONT_IMAGE_URL: https://shoat-portfolio.com
         NEXT_PUBLIC_BASIC_AUTH_USER: rootUser
         NEXT_PUBLIC_BASIC_AUTH_PASSWORD: jI4^jRyDg*bD
     # 開発環境のホスト側(ローカル)のファイル変更をコンテナに即座に反映
@@ -21,8 +21,8 @@ services:
       # ホットリロード用の監視設定
       WATCHPACK_POLLING: true
       # 他の環境変数があればここに追記
-      NEXT_PUBLIC_BLOG_CLD_FLONT_BASE_URL: https://d2z072fjnbmllc.cloudfront.net/
-      NEXT_PUBLIC_BLOG_CLD_FLONT_IMAGE_URL: https://d2z072fjnbmllc.cloudfront.net
+      NEXT_PUBLIC_BLOG_CLD_FLONT_BASE_URL: https://shoat-portfolio.com/
+      NEXT_PUBLIC_BLOG_CLD_FLONT_IMAGE_URL: https://shoat-portfolio.com
       NEXT_PUBLIC_BASIC_AUTH_USER: rootUser
       NEXT_PUBLIC_BASIC_AUTH_PASSWORD: jI4^jRyDg*bD
 
