--- a/src/package.json
+++ b/src/package.json
@@ -17,7 +17,8 @@
     "react-markdown": "^9.0.1",
     "react-server-dom-webpack": "^19.2.3",
     "remark": "^14.0.3",
-    "remark-gfm": "^4.0.0"
+    "remark-gfm": "^4.0.0",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
