--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -5,21 +5,10 @@ services:
       context: .
       dockerfile: Dockerfile
       args:
-        NEXT_PUBLIC_BLOG_CLD_FLONT_BASE_URL: https://shoat-portfolio.com/
-        NEXT_PUBLIC_BLOG_CLD_FLONT_IMAGE_URL: https://shoat-portfolio.com
-        NEXT_PUBLIC_BASIC_AUTH_USER: rootUser
-        NEXT_PUBLIC_BASIC_AUTH_PASSWORD: jI4^jRyDg*bD
-    # 環境変数設定
-    environment:
-      # 本番サーバー (next start) を実行
-      NODE_ENV: production
-      # コンテナ内部のポート (Dockerfileで設定済み)
-      PORT: 3000
-      # 他の環境変数があればここに追記
-      NEXT_PUBLIC_BLOG_CLD_FLONT_BASE_URL: https://shoat-portfolio.com/
-      NEXT_PUBLIC_BLOG_CLD_FLONT_IMAGE_URL: https://shoat-portfolio.com
-      NEXT_PUBLIC_BASIC_AUTH_USER: rootUser
-      NEXT_PUBLIC_BASIC_AUTH_PASSWORD: jI4^jRyDg*bD
+        NEXT_PUBLIC_BLOG_CLD_FLONT_BASE_URL: ${NEXT_PUBLIC_BLOG_CLD_FLONT_BASE_URL}
+        NEXT_PUBLIC_BLOG_CLD_FLONT_IMAGE_URL: ${NEXT_PUBLIC_BLOG_CLD_FLONT_IMAGE_URL}
+    env_file:
+    - .env
     # Cloud Watchにログ飛ばす設定
     logging:
           driver: "awslogs"
@@ -30,7 +19,7 @@ services:
             awslogs-create-group: "true"        # グループがなければ自動作成
 
     # サービス起動時に実行するコマンド (本番サーバー起動)
-    command: npm start --prefix src
+    command: npm start
 
     # ポートマッピング
     # 3000番ポートにマッピング
