全体的にリファクタリング

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,11 +22,10 @@
         "name": "next"
       }
     ],
+    "baseUrl": ".", // プロジェクトのルートを基準にする
     "paths": {
-      "@/*": [
-        "./*"
-      ]
-    }
+      "@/*": ["./*"] // @/ をルートディレクトリに紐付ける
+    },
   },
   "include": [
     "next-env.d.ts",
